# NetGuardX

./: .gitignore  CMakeLists.txt  README.md
include/core/: AppController.h  Logger.h  MetaTypes.h  PacketFilter.h
include/core/buffers/: BufferModel.h
include/core/capture/: PacketCaptureEngine.h  SimulatedPacketSource.h
include/core/eventbus/: EventBus.h
include/core/healing/: AutoHealingEngine.h
include/core/models/: FlowModel.h  MetricsModel.h  PacketModel.h
include/core/monitoring/: MonitoringEngine.h
include/core/nic/: NICModule.h
include/core/parser/: PacketParserPipeline.h
include/core/troubleshooting/: TroubleshootingEngine.h
include/gui/: MainWindow.h  PacketContextManager.h  PacketStreamPanel.h  UiTheme.h
include/gui/tabs/: AutoHealingTab.h  BuffersQueuesTab.h  DiagnosticsTab.h  EndToEndFlowTab.h  NICPhysicalTab.h  NetworkOverviewTab.h  PacketDeepDiveTab.h  TCPIPVisualizerTab.h
src/: main.cpp
src/core/: AppController.cpp  Logger.cpp  PacketFilter.cpp
src/core/buffers/: BufferModel.cpp
src/core/capture/: PacketCaptureEngine.cpp  SimulatedPacketSource.cpp
src/core/eventbus/: EventBus.cpp
src/core/healing/: AutoHealingEngine.cpp
src/core/models/: PacketModel.cpp
src/core/monitoring/: MonitoringEngine.cpp
src/core/nic/: NICModule.cpp
src/core/parser/: PacketParserPipeline.cpp
src/core/troubleshooting/: TroubleshootingEngine.cpp
src/gui/: MainWindow.cpp  PacketContextManager.cpp  PacketStreamPanel.cpp
src/gui/tabs/: AutoHealingTab.cpp  BuffersQueuesTab.cpp  DiagnosticsTab.cpp  EndToEndFlowTab.cpp  NICPhysicalTab.cpp  NetworkOverviewTab.cpp  NetworkOverviewTab.cpp.bak  PacketDeepDiveTab.cpp  TCPIPVisualizerTab.cpp
tests/: PipelineValidator.cpp  Task18Verifier.cpp
